trunk/Archive2/d5/039822a386cd53/output
main.cpp:17:13: error: no matching function for call to 'miami'
            miami<l>();
            ^~~~~~~~
main.cpp:4:16: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'b'
constexpr void miami()
               ^
1 error generated.
